--- a/KosaESS/src/main/resources/static/css/admin/class_form.css
+++ b/KosaESS/src/main/resources/static/css/admin/class_form.css
@@ -47,7 +47,7 @@ input {
 	width: 100%;
 }
 
-.class_form_content {
+.col_title, th {
 	color: #0E5881;
 	font-weight: bold;
 }
@@ -154,6 +154,7 @@ input {
 	border-collapse: collapse;
 	width: 100%;
 	margin: 10px 0 10px 0;
+	border-top: 2px solid #0E5881;
 }
 
 th {
@@ -162,10 +163,6 @@ th {
 
 .lecture_table tr td, th {
 	border: 1px solid #E7EFF3;
-}
-
-.lecture_table tr td {
-	padding-left: 10px;
 }
 
 .lecture_table tr td * {
@@ -260,4 +257,9 @@ form .submit_btn {
 .star {
 	color: red;
 	vertical-align: middle;
+}
+
+.td_check {
+	text-align: center;
+	padding: 0px;
 }
