--- a/KosaESS/src/main/resources/templates/admin/class_list.html
+++ b/KosaESS/src/main/resources/templates/admin/class_list.html
@@ -184,17 +184,17 @@
 							<td><a th:text="${class.clssNm}"
 								th:href="@{/admin/class/view/__${class.clssId}__}"
 								style="white-space: nowrap; overflow: hidden; text-overflow: ellipsis;"></a></td>
-							<td th:text="${class.cmpyNm} ? ${class.cmpyNm} : '미정'"></td>
+							<td th:text="${class.cmpyNm} ? ${class.cmpyNm} : '-'"></td>
 							<td class="class_status" th:text="${class.cmcdNm}">status</td>
 							<td class="aply_dt" th:text="|${#dates.format(class.aplyStartDt, 'yyyy-MM-dd HH:mm')} ~ 
 							${#dates.format(class.aplyEndDt, 'yyyy-MM-dd HH:mm')}|"></td>
 							<td class="class_dt" th:text="|${class.clssStartDd} ~ ${class.clssEndDd}|"></td>
 							<td class="set_tm" th:text="|${#dates.format(class.setInTm, 'hh:MM')} ~ ${#dates.format(class.setOutTm, 'hh:MM')}|"></td>
-							<td th:text="${class.clssAdr} ? ${class.clssAdr} : '미정'">class address</td>
+							<td th:text="${class.clssAdr} ? ${class.clssAdr} : '-'">class address</td>
 							<td class="limit_cnt"><a
 								th:href="@{/admin/class/__${class.clssId}__/applicant}"><span
 									th:text="${class.limitCnt}"></span></a></td>
-							<td class="manager_name" th:text="${class.mngrNm} ? ${class.mngrNm} :'미정'"></td>
+							<td class="manager_name" th:text="${class.mngrNm} ? ${class.mngrNm} :'-'"></td>
 						</tr>
 					</table>
 				</div>
