--- a/KosaESS/src/main/resources/templates/login.html
+++ b/KosaESS/src/main/resources/templates/login.html
@@ -33,7 +33,7 @@
 				<div
 					style="display: flex; justify-content: space-evenly; font-weight: bold; margin-top: 5px;">
 					<div>
-						<a>아이디/비밀번호 찾기</a>
+						<a style="cursor: pointer;">아이디/비밀번호 찾기</a>
 					</div>
 					<div>
 						<a th:href="@{/student/join}">회원가입</a>
