[seungwoo][#update]wlog 검색 기능 보강

--- a/KosaESS/src/main/resources/static/css/manager/modal_style.css
+++ b/KosaESS/src/main/resources/static/css/manager/modal_style.css
@@ -1,24 +1,37 @@
 @charset "UTF-8";
 
 .resn_modal_wrap{
+	position : fixed;
+	z-index: 10;
 	width : 100%;
-	z-index: 20;
+	height : 100%;
+	background-color:rgba(0, 0, 0, 0.3);
+	left:0;
+	top:0;
 	display : none;
-/* 	display: flex; */
-/* 	position : fixed; */
 	justify-content: center;
 	align-items: center;
+	overflow: auto;
+/* 	display : block; */
 }
-
-.resn_modal{
-	border: 1px solid black;
+.resn_modal_wrap .resn_modal{
 	width : 70%;
-/* 	height : 70%; */
+	height : 70%;
+	margin: auto;
+	position : fixed;
+	background-color:rgba(255, 255, 255, 1);
+	z-index: 20;
+/* 	justify-content: center; */
+/* 	align-items: center; */
+/* 	border: 1px solid black; */
 /* 	display : fixed; */
 }
 
 .resn_modal_wrap .resn_modal .wlog_info{
-	justify-content: center;
-	display: flex;
-	position: fixed;
+	width: auto;
+}
+
+.resn_modal_wrap .resn_modal .wlog_info table{
+	margin :0, auto;
+/* 	width: auto; */
 }
