--- a/KosaESS/src/main/resources/templates/manager/wlog_list.html
+++ b/KosaESS/src/main/resources/templates/manager/wlog_list.html
@@ -121,15 +121,15 @@
 				<tr th:each="wlog:${wlogList}" class="wlog_list_tbody_row">
 					<td> <input type="checkbox" class="chk_wlog"> </td>
 					<td class="row_number" th:text="${wlogStat.count}">번호</td>
-					<td class="row_name" th:text="${wlog.stdtId}">이름</td>
+					<td class="row_name" th:text="${wlog.stdtNm}">이름</td>
 					<td class="row_email" th:text="${wlog.userEmail}">이메일</td>
-					<td class="row_intime" th:text="${wlog.inTm}">출근 기록</td>
-					<td class="row_outtime" th:text="${wlog.outTm}">퇴근 기록</td>
+					<td class="row_intime" th:text="${#dates.format(wlog.inTm,'yyyy-MM-dd HH:mm:ss')}">출근 기록</td>
+					<td class="row_outtime" th:text="${#dates.format(wlog.outTm,'yyyy-MM-dd HH:mm:ss')}">퇴근 기록</td>
 					<td class="row_totaltime" th:text="${#numbers.formatDecimal(wlog.wlogTotalTm, 1, 1)}">출석 인정 시간</td>
 					<td class="row_wlogcode" th:text="${wlog.wlogCd}">출석 상태</td>
 					<td class="row_isdelete" th:text="${wlog.deleteYn}">삭제 여부</td>
 					<td class="file_cell"><img class="resn_icon" th:if="${wlog.resnId!=null}" onclick="showModal(this)" th:value="${wlog.resnId}" src="/img/file.png"></td>
-					<td class="row_resncode" th:text="${wlog.prscCd}">처리 상태</td>
+					<td class="row_resncode" th:text="${wlog.prcsCd}">처리 상태</td>
 				</tr>
 			</tbody>
 		</table>
@@ -137,25 +137,25 @@
 	</div>
 </div>
 <!-- 사유서 조회 모달 -->
-<div class="resn_modal_wrap">
+<div class="resn_modal_wrap" onclick="closeModal()">
 	<div class="resn_modal">
 		<div class="wlog_info">
 			<table>
 				<tr>
-					<th id="modal_name">이름</th>
-						<td>이름</td>
-					<th id="modal_email">이메일</th>
-						<td>이메일</td>
-					<th id="modal_resn_cd">사유서 처리 상태</th>
-						<td>사유서 처리 상태</td>
+					<th>이름</th>
+						<td id="modal_name">이름</td>
+					<th>이메일</th>
+						<td id="modal_email">이메일</td>
+					<th>사유서 처리 상태</th>
+						<td id="modal_prcs_name">사유서 처리 상태</td>
 				</tr>
 				<tr>
-					<th id="modal_in_time">출근</th>
-						<td>출근</td>
-					<th id="modal_out_time">퇴근</th>
-						<td>퇴근</td>
-					<th id="modal_wlog_cd">출석 상태</th>
-						<td>출석 상태</td>
+					<th>출근</th>
+						<td id="modal_in_time">출근</td>
+					<th>퇴근</th>
+						<td id="modal_out_time">퇴근</td>
+					<th>출석 상태</th>
+						<td id="modal_wlog_cd">출석 상태</td>
 				</tr>
 			</table>
 		</div>
