[seungwoo][#update] 모달창을 통한 사유서 처리 상태 수정 구현

--- a/KosaESS/src/main/resources/templates/manager/class_list.html
+++ b/KosaESS/src/main/resources/templates/manager/class_list.html
@@ -52,7 +52,7 @@
 						</ul>
 					</div>
 					<div class="search_btn_wrap">
-						<input type="button" id="search_reset_btn" value="초기화" onclick="search()">
+						<input type="button" id="search_reset_btn" value="초기화" onclick="reset()">
 						<input type="button" id="search_by_name_btn" value="검색" onclick="search()">
 					</div>
 				</div>
