--- a/KosaESS/src/main/resources/static/css/manager/modal_style.css
+++ b/KosaESS/src/main/resources/static/css/manager/modal_style.css
@@ -15,16 +15,13 @@
 /* 	display : block; */
 }
 .resn_modal_wrap .resn_modal{
+	padding : 5%;
 	width : 70%;
 	height : 70%;
 	margin: auto;
 	position : fixed;
 	background-color:rgba(255, 255, 255, 1);
-	z-index: 20;
-/* 	justify-content: center; */
-/* 	align-items: center; */
-/* 	border: 1px solid black; */
-/* 	display : fixed; */
+	
 }
 
 .resn_modal_wrap .resn_modal .wlog_info{
@@ -33,5 +30,14 @@
 
 .resn_modal_wrap .resn_modal .wlog_info table{
 	margin :0, auto;
+	border-collapse: collapse;
+	border : 1px black solid;
 /* 	width: auto; */
+}
+
+.resn_modal_wrap .resn_modal .resn_controller {
+	border : 1px black solid;
+	display: flex;
+	width: 50%;
+	justify-content: center;
 }
