--- a/KosaESS/src/main/resources/templates/manager/wlog_list.html
+++ b/KosaESS/src/main/resources/templates/manager/wlog_list.html
@@ -26,13 +26,16 @@
 	<div class="title_wrap">
 		<span class="title" th:text="${title}"></span>
 		<br>
-<!-- 		<input id="class_id_save" type="text" style="display: none;"> -->
-<!-- 		<input id="start_date_save" type="text" style="display: none;" th:value="${thisClass.clssId!=null?thisClass.clssStartDd:null}"> -->
-<!-- 		<input id="end_date_save" type="text" style="display: none;" th:value="${thisClass.clssId!=null?thisClass.clssEndDd:null}"> -->
-<!-- 		<input id="keyword_save" type="text" style="display: none;"> -->
-<!-- 		<div style="display: none;"> -->
-<!-- 			<input th:each="cmptCN:${cmptCodeNameList}" class="cmpt_checkbox_save" th:name="${cmptCN.cmcdId}" type="checkbox" checked="checked" th:value="${cmptCN.cmcdId}"> -->
-<!-- 		</div> -->
+		<!-- 검색 조건 저장 style="display: none;" -->
+		<input id="class_id_save" type="text">
+		<input id="start_date_save" type="text" th:value="${thisClass.clssId!=null?thisClass.clssStartDd:null}">
+		<input id="end_date_save" type="text" th:value="${thisClass.clssId!=null?thisClass.clssEndDd:null}">
+		<input id="keyword_save" type="text">
+		<div>
+			<input type="checkbox" class="chk_wok_save" th:value="${wlogCd.cmcdId}" th:each="wlogCd:${wlogCdList}" checked="checked">
+			<input type="checkbox" class="resn_only_save">
+			<input type="checkbox" class="contain_delete_save">
+		</div>
 	</div>
 
 	<!-- content wrap-->
@@ -68,8 +71,12 @@
 						</td>
 						<td class="search_filter_name">출석 상태<br>기록 상태</td>
 						<td class="search_filter_input">
-							<span>전체</span><input type="checkbox" id="chkAll">
-							<span th:each="wlogCd:${wlogCdList}"><span th:text="${wlogCd.cmcdNm}"></span><input type="checkbox" class="chkWokCd" th:value="${wlogCd.cmcdId}"></span>
+							<span>전체</span>
+							<input type="checkbox" id="chkAll" checked="checked">
+							<span th:each="wlogCd:${wlogCdList}">
+								<span th:text="${wlogCd.cmcdNm}"></span>
+								<input type="checkbox" class="chkWokCd" th:value="${wlogCd.cmcdId}" checked="checked">
+							</span>
 							<br>
 							<span>사유서 포함 된 기록만 보기</span><input type="checkbox" id="fileContainedOnly">
 							<span>삭제 된 기록 보기</span><input type="checkbox" id="isDelete">
@@ -137,7 +144,7 @@
 	</div>
 </div>
 <!-- 사유서 조회 모달 -->
-<div class="resn_modal_wrap" onclick="closeModal()">
+<div class="resn_modal_wrap">
 	<div class="resn_modal">
 		<div class="wlog_info">
 			<table>
